<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SawaApp</string>
    <string name="tap_to_check_in">Tap To Check-In</string>
    <string name="favorites_menu">Favorites</string>
    <string name="history_menu">History</string>
    <string name="language_menu">Language</string>
    <string name="theme_menu">Theme</string>
    <string name="logout_menu">Logout</string>
    <string name="where_to_hint">Where to?</string>
    <string name="nearby_places">nearby_places</string>
    <string name="you_have_checked_in">You Have Checked-In</string>
    <string name="checked_in_place" translatable="false">Starbucks</string>


    <string name="all_dest">All</string>
    <string name="retail_dest">Retail</string>
    <string name="health_dest">Health</string>
    <string name="banks_dest">Banks</string>
    <string name="government_dest">Government</string>
    <string name="entertaiment_dest">Entertainment</string>
    <string name="telecommunication_dest">Telecommunication</string>
    <string name="education_dest">Education</string>
    <string name="travel_dest">Travel</string>
    <string name="insurance_dest">Insurance</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="scan_something">Scan something...</string>
    <string name="branch">Branch :</string>
    <string name="capacity">Capacity:</string>
    <string name="duration">Duration :</string>
    <string name="check_in_time">Check-in time :</string>
    <string name="check_out">Check-out</string>
    <string name="check_in_n_another_place">Check-in\n another place</string>
    <string name="offers">Offers</string>

    <string name="dialogTitle" translatable="false">Delete File</string>
    <string name="dialogMessage" translatable="false">Deleting file may be harm your system</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="save">Save</string>
    <string name="maybe_later">Maybe later</string>
    <string name="thank_you_for_visiting">Thank you for visiting</string>
    <string name="you_have_spent">You Have Spent</string>
    <string name="check_out_btn">Check-out</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message"> Please click YES To Check_In</string>
    <string name="yes_dilog_click">Yes</string>


    <array name="autosize_text_sizes">
        <item>12sp</item>
        <item>20sp</item>
        <item>40sp</item>
        <item>100sp</item>
    </array>


</resources>